--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -12,3 +12,8 @@
 .second {
   width: 100%;
 }
+
+.about-me {
+  @apply h-screen flex flex-col space-y-4 items-center px-12 py-12;
+  max-width: 40%;
+}
